[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pointcloudlib"
version = "0.1.0"
description = "A library for downloading arbitrary polygons of large remote point cloud datasets."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Yair Roorda", email = "yairroorda@gmail.com"}]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas",
    "shapely",
    "requests",
    "tkintermapview>=1.29"
]

[project.urls]
Homepage = "https://github.com/yairroorda/pointcloudlib"
Repository = "https://github.com/yairroorda/pointcloudlib.git"
Issues = "https://github.com/yairroorda/pointcloudlib/issues"

[tool.setuptools]
packages = ["pointcloudlib"]
