[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudfetch"
version = "0.1.2"
description = "A library for downloading arbitrary polygons of large remote point cloud datasets."
readme = "README.md"
license = "MIT"
authors = [{name = "Yair Roorda", email = "yairroorda@gmail.com"}]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "geopandas",
    "shapely",
    "requests",
    "tkintermapview>=1.29"
]

[project.urls]
Homepage = "https://github.com/yairroorda/cloudfetch"
Documentation = "https://yairroorda.github.io/cloudfetch/"
Repository = "https://github.com/yairroorda/cloudfetch.git"
Issues = "https://github.com/yairroorda/cloudfetch/issues"

[tool.setuptools]
packages = ["cloudfetch"]
